--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 
   # RabbitMQ ??
   rabbitmq:
-    host: localhost
+    host: 1.1.1.1
     port: 5672
     username: guest
     password: guest
@@ -36,6 +36,8 @@ spring:
 
 # Logging
 logging:
+  pattern:
+    dateformat: "yyyy-MM-dd HH:mm:ss"
   level:
     org:
       hibernate: info
