--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,29 @@ server:
 
 spring:
 
+  # H2 ??
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2
+#  datasource:
+#    url: jdbc:h2:mem:test
+#    username: root
+#    password: 1234
+
+  datasource:
+    hikari:
+      connection-test-query: SELECT 1
+      pool-name: master
+      maximum-pool-size: 30
+      minimum-idle: 5
+      jdbc-url: jdbc:mariadb://localhost:3306/dains
+      username: root
+      password: 1234
+      driver-class-name: org.mariadb.jdbc.Driver
+      connection-timeout: 5000
+      idle-timeout: 10000
+
   # RabbitMQ ??
   rabbitmq:
     host: 52.79.143.215
@@ -14,15 +37,6 @@ spring:
     username: guest
     password: guest
 
-  # H2 ??
-  h2:
-    console:
-      enabled: true
-      path: /h2
-  datasource:
-    url: jdbc:h2:mem:test
-    username: root
-    password: 1234
 #  sql:
 #    init:
 #      mode: always
